--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <p class="font-italic about-mee">
            Soy un estudiante avanzado en Diseño y Sistemas Microinformaticos y Redes 
           Apasionado de la ciberseguridad y por transformar ideas en creatividad visual. 
-          Con un 4 años de experiencia como freelancer me he dedicado
+          Con 4 años de experiencia como freelancer me he dedicado
           a crear logotipos y banners entre otras muchos diseños.
           </p>
           <div class="row">
