--- a/index.html
+++ b/index.html
@@ -203,26 +203,9 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Pagina/Logos/DestinyLogo-01.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Logo</h4>
-              <p>Panel</p>
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pagina/Logos/DestinyLogo-01.png" data-gall="portfolioGallery"
-                  class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe"
-                  class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
-          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Pagina/Logos/Logo1_Mesa de trabajo 1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Logo</h4>
-              <p>Panel</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Pagina/Logos/Logo1_Mesa de trabajo 1.png" data-gall="portfolioGallery"
                   class="venobox" title="Discord"><i class="bx bx-plus"></i></a>
@@ -232,14 +215,42 @@
             </div>
           </div>
         </div>
-  
-  
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/GARCII LOGO.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>LOGO</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/GARCII LOGO.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/HEIRON 2020.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>LOGO</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/HEIRON 2020.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        
         <div class="col-lg-4 col-md-6 portfolio-item filter-trabajos-varios">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Pagina/Trabajos Varios/poster1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Poster 1</h4>
-              <p></p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Pagina/Trabajos Varios/poster1.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Off stream"><i class="bx bx-plus"></i></a>
@@ -247,14 +258,98 @@
             </div>
           </div>
         </div>
-  
-  
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/HEADER TW 2019.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>HEADER</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/HEADER TW 2019.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/Heiron Logo 2019.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>LOGO</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/Heiron Logo 2019.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/RALF BANNER.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>BANNER</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/RALF BANNER.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/ZERO LOGO.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>LOGO</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/ZERO LOGO.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/MINIATURA.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>MINIATURA</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/MINIATURA.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/THEPANAS.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>LOGO</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/THEPANAS.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <div class="col-lg-4 col-md-6 portfolio-item filter-twitch">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Pagina/Twitch/Twitch2_Mesa de trabajo 1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Fondo</h4>
-              <p></p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Pagina/Twitch/Twitch2_Mesa de trabajo 1.png" data-gall="portfolioGallery" class="venobox"
                   title="Off stream"><i class="bx bx-plus"></i></a>
