--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Heiron World</title>
+  <title>R4CKS WORLD</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,7 +43,7 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Heiron</a></h1>
+      <h1><a href="index.html">R4CKS</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>Bienvenido a mi portafolio de <span>Diseño</span></h2>
@@ -61,8 +61,8 @@
 
 
       <div class="social-links">
-        <a href="https://twitter.com/aaroonmk" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://www.instagram.com/aaroonmk/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://twitter.com/r44cks" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="https://www.instagram.com/r44cks/" class="instagram"><i class="icofont-instagram"></i></a>
       </div>
 
     </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Mi Discord:</strong> discord.gg/QVGPaYc2cf</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Mi Web:</strong>https://spanishlife.shop</li>
               </ul>
             </div>
           </div>
