--- a/index.html
+++ b/index.html
@@ -356,6 +356,48 @@
           </div>
         </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/mamichula.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>PORTADA</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/mamichula.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/lacone.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>PORTADA</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/lacone.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Pagina/Logos/piscis album.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>PORTADA</h4>
+              <p></p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/Pagina/Logos/piscis album.jpg" data-gall="portfolioGallery" class="venobox"
+                  title="Ovelay"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
     </div>
   </section><!-- End Portfolio Section -->
 
