--- a/index.html
+++ b/index.html
@@ -386,12 +386,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-logos">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Pagina/Logos/piscis album.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/Pagina/Logos/piscis.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>PORTADA</h4>
               <p></p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/Pagina/Logos/piscis album.jpg" data-gall="portfolioGallery" class="venobox"
+                <a href="assets/img/portfolio/Pagina/Logos/piscis.jpg" data-gall="portfolioGallery" class="venobox"
                   title="Ovelay"><i class="bx bx-plus"></i></a>
               </div>
             </div>
