--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Mi Discord</h3>
-            <p>discord.gg/QVGPaYc2cf</p>
+            <p>@heiroon</p>
           </div>
         </div>
 
@@ -425,9 +425,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Redes sociales</h3>
             <div class="social-links">
-              <a href="https://twitter.com/aaroonmk" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="https://twitter.com/r44cks" class="twitter"><i class="icofont-twitter"></i></a>
 
-              <a href="https://www.instagram.com/aaroonmk/" class="instagram"><i class="icofont-instagram"></i></a>
+              <a href="https://www.instagram.com/r4cksw/" class="instagram"><i class="icofont-instagram"></i></a>
 
 
             </div>
