--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Mi Web:</strong>https://spanishlife.shop</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Contacto:</strong>Discord o RRSS</li>
               </ul>
             </div>
           </div>
