--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <div class="social-links">
         <a href="https://twitter.com/r44cks" class="twitter"><i class="icofont-twitter"></i></a>
-        <a href="https://www.instagram.com/r44cks/" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="https://www.instagram.com/r4cksw/" class="instagram"><i class="icofont-instagram"></i></a>
       </div>
 
     </div>
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Diseñador</h3>
           <p class="font-italic about-mee">
-           Soy un estudiante avanzado en Diseño y Sistemas Microinformaticos y Redes 
+           Soy un estudiante en Diseño y Sistemas Microinformaticos y Redes 
           Apasionado de la ciberseguridad y por transformar ideas en creatividad visual. 
           Con 4 años de experiencia como freelancer me he dedicado
           a crear logotipos y banners entre otras muchos diseños.
